--- a/roles/basic/tasks/user.yml
+++ b/roles/basic/tasks/user.yml
@@ -5,12 +5,17 @@
    name: "{{ user_name }}"
    state: present
 
+- name: Creating docker group
+  group:
+    name: docker
+    state: present
+
 - name: Creating super user {{ user_name}} for node management
   user:
     name: "{{ user_name }}"
     password: "{{ user_password | password_hash('sha512')}}"
     group: "{{ user_name }}"
-    groups: sudo, docker
+    groups: "sudo, docker"
     append: yes
     shell: /bin/bash
     system: no
