Added docker group

--- a/roles/basic/tasks/user.yml
+++ b/roles/basic/tasks/user.yml
@@ -15,7 +15,7 @@
     name: "{{ user_name }}"
     password: "{{ user_password | password_hash('sha512')}}"
     group: "{{ user_name }}"
-    groups: "sudo, docker"
+    groups: sudo,docker
     append: yes
     shell: /bin/bash
     system: no
