--- a/roles/basic/tasks/main.yml
+++ b/roles/basic/tasks/main.yml
@@ -4,6 +4,10 @@
   include: apt.yml
   when: hosts is defined
 
+- name: Change hostname to name specified in hostsfile
+  include: hostname.yml
+  when: hosts is defined
+
 - name: Setup standard user
   include: user.yml
   when: password is defined and username is defined and hosts is defined
