--- a/hosts.example
+++ b/hosts.example
@@ -17,11 +17,12 @@ ship2 ansible_host=172.16.1.12
 ship3 ansible_host=172.16.1.13
 ship4 ansible_host=172.16.1.14
 
-[testnodes]
-ship4 ansible_host=172.16.1.14
-
 [master]
-172.16.1.14
+flagship ansible_host=172.16.1.10
 
 [nodes]
-172.16.1.[11:14]
+ship1 ansible_host=172.16.1.11
+ship2 ansible_host=172.16.1.12
+ship3 ansible_host=172.16.1.13
+ship4 ansible_host=172.16.1.14
+
